# herbolution

./: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  rustfmt.toml
client/: Cargo.toml
client/src/: app.rs  input.rs  lib.rs  main.rs  session.rs  trace.rs  ui.rs
client/src/app/: fs.rs  handler.rs  mod.rs
client/src/menu/: config.rs  mod.rs  options.rs  play.rs  title.rs
client/src/session/: chunk.rs  debugger.rs  mod.rs  player.rs  world.rs
client/src/ui/: block.rs  mod.rs  text.rs
client/src/video/: camera.rs  frame.rs  gpu.rs  mod.rs
client/src/video/fx/: ssao.rs
client/src/video/resource/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  sampler.rs  shader.rs  texture.rs  vbo.rs
client/src/video/shaders/: ui.wgsl  world.wgsl
client/src/video/ui/: atlas.rs  brush.rs  font.rs  mod.rs  text.rs  vertex.rs
client/src/video/world/: chisel.rs  mod.rs  vertex.rs  world.rs
client/src/world/: chunk.rs  frustum.rs  mod.rs  particle.rs  player.rs  sky.rs
crates/client/: Cargo.toml
crates/client/src/: app.rs  chunk.rs  debugger.rs  engine.rs  input.rs  lib.rs  main.rs  mesh.rs  player.rs  session.rs  uniform.rs  world.rs
crates/client/src/app/: handler.rs  mod.rs  persist.rs  state.rs  store.rs  switch.rs
crates/client/src/gpu/: binding.rs  ext.rs  geometry.rs  mod.rs  renderer.rs
crates/client/src/menu/: config.rs  mod.rs  options.rs  play.rs  title.rs
crates/client/src/session/: chunk.rs  debugger.rs  mod.rs  player.rs  world.rs
crates/client/src/state2d/: mod.rs  shader.wgsl  text.rs
crates/client/src/state3d/: mod.rs  shader.wgsl
crates/client/src/world/: chunk.rs  frustum.rs  mod.rs  player.rs
crates/engine/: Cargo.toml
crates/engine/src/: input.rs  lib.rs
crates/engine/src/gpu/: handle.rs  mod.rs
crates/engine/src/renderer_2d/: mod.rs  pipeline.rs  text.rs
crates/engine/src/renderer_3d/: mod.rs  pipeline.rs  quad.wgsl  vertex.rs
crates/game/: Cargo.toml
crates/game/src/: channel.rs  client.rs  lib.rs  world.rs
crates/game/src/chunk/: channel.rs  cube.rs  generator.rs  map.rs  material.rs  mod.rs  provider.rs
crates/game/src/entity/: body.rs  mod.rs  set.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: bind_group.rs  buffer.rs  camera.rs  frame.rs  handle.rs  instance.rs  lib.rs  mesh.rs  payload.rs  sampler.rs  shader.rs  surface.rs  texture.rs
crates/gpu/src/pipeline/: map.rs  mod.rs
crates/herbolution-engine/: Cargo.toml
crates/herbolution-engine/src/: input.rs  lib.rs
crates/herbolution-engine/src/camera/: mod.rs  projection.rs
crates/herbolution-engine/src/gpu/: binding.rs  mod.rs  pipeline.rs  surface.rs  texture.rs  uniform.rs
crates/herbolution-engine/src/ui/: mod.rs  pipeline.rs  text.rs  vertex.rs
crates/herbolution-engine/src/world/: chunk_mesh.rs  mod.rs  model.rs  shader.wgsl
crates/herbolution-lib/: Cargo.toml
crates/herbolution-lib/src/: lib.rs  state.rs
crates/herbolution-lib/src/app/: mod.rs
crates/herbolution-lib/src/fs/: mod.rs  save.rs
crates/herbolution-lib/src/menu/: mod.rs  (+1 more)
crates/herbolution_client/: Cargo.toml
crates/herbolution_client/src/: debugger.rs  lib.rs  main.rs  mesh.rs  session.rs  splash.rs
crates/herbolution_engine/: Cargo.toml
crates/herbolution_engine/src/: input.rs  lib.rs  video.rs
crates/herbolution_game/: Cargo.toml
crates/herbolution_game/src/: handle.rs  lib.rs  world.rs
crates/herbolution_gpu/: Cargo.toml
crates/herbolution_gpu/src/: bind_group.rs  buffer.rs  camera.rs  frame.rs  handle.rs  instance.rs  lib.rs  mesh.rs  sampler.rs  surface.rs  texture.rs
crates/herbolution_lib/: Cargo.toml
crates/herbolution_lib/src/: aabb.rs  fs.rs  lib.rs  light.rs  motile.rs  point.rs  time.rs
crates/herbolution_math/: Cargo.toml
crates/herbolution_math/src/: lib.rs  proj.rs
crates/herbolution_util/: Cargo.toml
crates/herbolution_util/src/: channel.rs  chunk.rs  display.rs  face.rs  fs.rs  lib.rs  plane.rs  ptr.rs  save.rs
crates/lib/: Cargo.toml
crates/lib/src/: fps.rs  fs.rs  lib.rs  light.rs  time.rs
crates/rust-simd-noise/: Cargo.toml  README.md
crates/rust-simd-noise/src/: lib.rs
crates/video/: Cargo.toml
crates/video-2d/: Cargo.toml
crates/video-2d/src/: draw.rs  lib.rs  shader.wgsl  text.rs  vertex.rs
crates/video/src/: draw.rs  frame.rs  gpu.rs  lib.rs  pipeline.rs  text.rs
engine/: Cargo.toml
engine/src/: camera.rs  input.rs  lib.rs
engine/src/camera/: frustum.rs  mod.rs
engine/src/gpu/: frame.rs  handle.rs  mod.rs  surface.rs
engine/src/renderer_2d/: mod.rs  pipeline.rs  shader.wgsl  text.rs  vertex.rs
engine/src/renderer_3d/: lighting.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs
game/: Cargo.toml
game/src/: channel.rs  handle.rs  lib.rs
game/src/client/: input.rs  mod.rs  output.rs
game/src/world/: map.rs  mod.rs
lib/: Cargo.toml
lib/src/: aabb.rs  color.rs  counter.rs  display.rs  fps.rs  fs.rs  handler.rs  lib.rs  light.rs  listener.rs  macros.rs  motile.rs  point.rs  proj.rs  rotation.rs  save.rs  size.rs  task.rs  vector.rs  world.rs
lib/src/collections/: mailbox.rs  mod.rs  octree.rs
lib/src/engine/: as_no_uninit.rs  binding.rs  buffer.rs  gpu.rs  mesh.rs  mod.rs  pipeline.rs  storage.rs  surface.rs  uniform.rs
lib/src/game/: fps.rs  mod.rs  time.rs
lib/src/geometry/: mod.rs  plane.rs
lib/src/matrix/: mat3.rs  mat4.rs
lib/src/ptr/: detect_mut.rs  mod.rs
lib/src/rotation/: euler.rs  mod.rs  quat.rs
lib/src/size/: mod.rs  size2.rs  size3.rs
lib/src/spatial/: aabb.rs  face.rs  mod.rs  plane.rs
lib/src/ui/: mod.rs
lib/src/util/: group_key.rs  mod.rs  time.rs
lib/src/vector/: macros.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
lib/src/world/: debugger.rs  mod.rs  observer.rs  player.rs  position.rs  renderer.rs  shader.wgsl  transform.rs
server/: Cargo.toml
server/src/: handle.rs  lib.rs  player.rs  world.rs
server/src/chunk/: codec.rs  cube.rs  handle.rs  map.rs  material.rs  mesh.rs  mod.rs  provider.rs
server/src/entity/: behavior.rs  body.rs  components.rs  mod.rs  set.rs
server/src/generator/: mod.rs
server/src/player/: handle.rs  mod.rs
(+377 files in other folders)
