[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bitflags = "2.9.1"
bytemuck = "1.23.1"
clap = "4.5.40"
crossbeam = "0.8.4"
fontdue = "0.9.3"
#generational-arena = "0.2.9"
hashbrown = "0.15.4"
image = "0.25.6"
image-atlas = "0.4.1"
lazy_static = "1.5.0"
line_drawing = "1.0.1"
noise = "0.9.0"
num = "0.4.3"
num_cpus = "1.17.0"
oneshot = "0.1.11"
parking_lot = "0.12.4"
pollster = "0.4.0"
pulz-arena = "0.4.0"
rayon = "1.10.0"
serde = "1.0.219"
smallvec = "1.15.1"
static_assertions = "1.1.0"
taffy = "0.8.3"
thiserror = "2.0.12"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "25.0.2"
winit = "0.30.11"

[profile.dev]
opt-level = 3
debug-assertions = true
