[workspace]
resolver = "3"
members = ["client", "lib", "server", "crates/*"]

[workspace.dependencies]
bytemuck = "1.23.1"
crossbeam-channel = "0.5.15"
fastrand = "2.3.0"
generational-arena = "0.2.9"
hashbrown = "0.15.4"
image = "0.25.6"
num_cpus = "1.17.0"
parking_lot = "0.12.4"
pollster = "0.4.0"
rayon = "1.10.0"
serde = "1.0.219"
smallvec = "2.0.0-alpha.11"
thiserror = "2.0.12"
time = "0.3.41"
toml = "0.9.2"
tracing = "0.1.41"
tracing-tracy = { version = "0.11.4", features = ["fibers"] }
