[package]
name = "herbolution_client"
version = "0.1.0"
edition = "2024"

[dependencies]
herbolution_lib = { path = "../lib" }
herbolution_server = { path = "../server" }

bytemuck = { workspace = true, features = ["derive"] }
fastrand.workspace = true
image.workspace = true
pollster.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
thiserror.workspace = true
toml.workspace = true

clap = "4.5.40"
fontdue = "0.9.3"
image-atlas = "0.4.1"
tracing-subscriber = "0.3.19"
wgpu = "25.0.2"
winit = "0.30.11"
