[package]
name = "herbolution-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
glyphon.workspace = true
image-atlas.workspace = true
image.workspace = true
lib = { package = "herbolution-lib", path = "../lib" }
math = { package = "herbolution-math", path = "../math" }
pollster.workspace = true
pulz-arena.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
tracing.workspace = true