[package]
name = "herbolution-game"
version = "0.1.0"
edition = "2024"

[dependencies]
cached.workspace = true
hashbrown.workspace = true
kanal.workspace = true
lib = { package = "herbolution-lib", path = "../lib" }
line_drawing.workspace = true
math = { package = "herbolution-math", path = "../math" }
pulz-arena.workspace = true
simdnoise.workspace = true
tinyvec.workspace = true
tokio = { workspace = true, features = ["rt"] }