[package]
name = "herbolution-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
clap.workspace = true
crossbeam.workspace = true
game = { package = "herbolution-game", path = "../game" }
glyphon.workspace = true
hashbrown.workspace = true
image-atlas.workspace = true
image.workspace = true
lib = { package = "herbolution-lib", path = "../lib" }
math = { package = "herbolution-math", path = "../math" }
num.workspace = true
pollster.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
generational-arena.workspace = true