[package]
name = "herbolution-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
engine = { package = "herbolution-engine", path = "../engine" }
game = { package = "herbolution-game", path = "../game" }
lib = { package = "herbolution-lib", path = "../lib" }
math = { package = "herbolution-math", path = "../math" }

# External dependencies
clap.workspace = true
crossbeam.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true
