[package]
name = "herbolution-game"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam.workspace = true
hashbrown.workspace = true
lib = { package = "herbolution-lib", path = "../lib" }
line_drawing.workspace = true
math = { package = "herbolution-math", path = "../math" }
oneshot.workspace = true
pulz-arena.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true
noise.workspace = true
parking_lot.workspace = true
num_cpus.workspace = true
