[package]
name = "herbolution_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
herbolution_gpu = { path = "../herbolution_gpu" }
herbolution_math = { path = "../herbolution_math" }

# External dependencies
ambisonic.workspace = true
bytemuck.workspace = true
fontdue.workspace = true
image.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
taffy.workspace = true
winit.workspace = true
