[package]
name = "herbolution_game"
version = "0.1.0"
edition = "2024"

[dependencies]
herbolution_lib = { path = "../herbolution_util" }
herbolution_math = { path = "../herbolution_math" }

crossbeam.workspace = true
generational-arena.workspace = true
hashbrown.workspace = true
line_drawing.workspace = true
noise.workspace = true
parking_lot.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true
smallvec.workspace = true
