[package]
name = "herbolution-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
hashbrown.workspace = true
lazy_static.workspace = true
math = { package = "herbolution-math", path = "../math" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true
