[package]
name = "simdnoise"
version = "3.1.7"
authors = ["Jack Mott <jack.mott@gmail.com>"]
description = "SIMD accelerate noise library with runtime feature detection"
license = "Apache-2.0/MIT"
documentation = "README.md"
keywords = ["SIMD", "noise", "simplex", "perlin", "performance"]
edition = "2018"

[dependencies]
paste = "1.0.15"
