[package]
name = "herbolution-video-2d"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
gpu = { package = "herbolution-gpu", path = "../gpu" }
math = { package = "herbolution-math", path = "../math" }

# External dependencies
bytemuck.workspace = true
#fontdue.workspace = true
image.workspace = true
#taffy.workspace = true
