[package]
name = "herbolution-video"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
gpu = { package = "herbolution-gpu", path = "../gpu" }
math = { package = "herbolution-math", path = "../math" }
video-2d = { package = "herbolution-video-2d", path = "../video-2d" }
video-3d = { package = "herbolution-video-3d", path = "../video-3d" }
