[package]
name = "herbolution-video"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
gpu = { package = "herbolution-gpu", path = "../gpu" }
math = { package = "herbolution-math", path = "../math" }
painter = { package = "herbolution-painter", path = "../painter" }
sculptor = { package = "herbolution-sculptor", path = "../sculptor" }
